--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ name: CI
 on:
   push:
     branches: [ master ]
+  pull_request:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -31,7 +32,7 @@ jobs:
 
       # Publish to gh-pages
       - name: Publish HTML to GitHub Pages
-        if: success()
+        if: success() && github.ref == 'refs/heads/master'
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./document
